@@ -335,7 +335,7 @@ OBJECTS_TREE = {'functions': sorted(['pa_count_devices', 'pa_get_default_input',
                                          'Harmonizer', 'Chorus', 'AllpassWG']),
                       'filters': sorted(['Biquad', 'BandSplit', 'Port', 'Hilbert', 'Tone', 'DCBlock', 'EQ', 'Allpass',
                                          'Allpass2', 'Phaser', 'Biquadx']),
-                      'generators': sorted(['Noise', 'Phasor', 'Sine', 'Input', 'FM', 'SineLoop']),
+                      'generators': sorted(['Noise', 'Phasor', 'Sine', 'Input', 'FM', 'SineLoop', 'Blit']),
                       'internal objects': sorted(['Dummy', 'InputFader', 'Mix', 'VarPort']),
                       'midi': sorted(['Midictl', 'Notein']),
                       'opensoundcontrol': sorted(['OscReceive', 'OscSend']),
